crud, exp e imp a json y TODAS LAS EXCEPCIONES controlado y acabado. modo examen a medias, mirar bien MVC de esto